--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 </nav>
 
 <!-- 主内容区域 (增加右侧边距适配悬浮导航) -->
-<main class="pt-8 pr-20 md:pr-0">
+<main class="pr-20 md:pr-0">
     <!-- 封面页 -->
     <section id="cover"
              class="min-h-screen flex items-center justify-center bg-gradient-to-br from-primary/90 to-primary py-20 px-4 section-fade">
@@ -833,23 +833,8 @@
     <div class="container mx-auto max-w-6xl">
         <div class="text-center">
             <h2 class="font-heading font-bold text-xl mb-4">US Shopping Trends & Consumer Behavior Analysis</h2>
-            <p class="text-neutral-300 mb-6 max-w-2xl mx-auto">
-                Comprehensive data-driven insights to optimize product offerings, marketing strategies, and customer
-                experience
-            </p>
-            <div class="flex justify-center space-x-4 mb-6">
-                <a href="#" class="text-neutral-300 hover:text-white transition-colors">
-                    <i class="fa fa-linkedin text-xl"></i>
-                </a>
-                <a href="#" class="text-neutral-300 hover:text-white transition-colors">
-                    <i class="fa fa-twitter text-xl"></i>
-                </a>
-                <a href="#" class="text-neutral-300 hover:text-white transition-colors">
-                    <i class="fa fa-envelope text-xl"></i>
-                </a>
-            </div>
             <p class="text-neutral-400 text-sm">
-                © 2025 US Shopping Trends Analysis. All rights reserved.
+                Present by Group 02 (LIU YIFAN, ZENG YUKUN, TIAN JIANPING, WU XIAOTIAN).
             </p>
         </div>
     </div>
