--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                     <param name='display_spinner' value='yes'/>
                     <param name='display_overlay' value='yes'/>
                     <param name='display_count' value='yes'/>
-                    <param name='language' value='zh-CN'/>
+                    <param name='language' value='en-US'/>
                     <param name='filter' value='publish=yes'/>
                 </object>
             </div>
@@ -260,7 +260,7 @@
                     <param name='display_spinner' value='yes'/>
                     <param name='display_overlay' value='yes'/>
                     <param name='display_count' value='yes'/>
-                    <param name='language' value='zh-CN'/>
+                    <param name='language' value='en-US'/>
                     <param name='filter' value='publish=yes'/>
                 </object>
             </div>
@@ -331,7 +331,7 @@
                     <param name='display_spinner' value='yes'/>
                     <param name='display_overlay' value='yes'/>
                     <param name='display_count' value='yes'/>
-                    <param name='language' value='zh-CN'/>
+                    <param name='language' value='en-US'/>
                     <param name='filter' value='publish=yes'/>
                 </object>
             </div>
@@ -403,7 +403,7 @@
                     <param name='display_spinner' value='yes'/>
                     <param name='display_overlay' value='yes'/>
                     <param name='display_count' value='yes'/>
-                    <param name='language' value='zh-CN'/>
+                    <param name='language' value='en-US'/>
                     <param name='filter' value='publish=yes'/>
                 </object>
             </div>
@@ -479,7 +479,7 @@
                     <param name='display_spinner' value='yes'/>
                     <param name='display_overlay' value='yes'/>
                     <param name='display_count' value='yes'/>
-                    <param name='language' value='zh-CN'/>
+                    <param name='language' value='en-US'/>
                     <param name='filter' value='publish=yes'/>
                 </object>
             </div>
@@ -555,7 +555,7 @@
                     <param name='display_spinner' value='yes'/>
                     <param name='display_overlay' value='yes'/>
                     <param name='display_count' value='yes'/>
-                    <param name='language' value='zh-CN'/>
+                    <param name='language' value='en-US'/>
                     <param name='filter' value='publish=yes'/>
                 </object>
             </div>
@@ -628,7 +628,7 @@
                     <param name='display_spinner' value='yes'/>
                     <param name='display_overlay' value='yes'/>
                     <param name='display_count' value='yes'/>
-                    <param name='language' value='zh-CN'/>
+                    <param name='language' value='en-US'/>
                     <param name='filter' value='publish=yes'/>
                 </object>
             </div>
